--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,3 @@
 pytest==5.4.2
-py==1.8.1
-pluggy==0.13.1
-more-itertools==8.3.0
-attrs==19.3.0
-wcwidth==0.1.9
-packaging==20.4
+pytest-cov==2.8.1
+pytest-mock==3.1.0
