--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,15 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
 idna==2.9
+lxml==4.5.1
 more-itertools==8.3.0
 packaging==20.4
 pathspec==0.8.0
+pika==1.1.0
 pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.7
+pytest==5.4.2
 python-json-logger==0.1.11
 PyYAML==5.3.1
 regex==2020.5.14
