--- a/config.yml
+++ b/config.yml
@@ -17,4 +17,10 @@ app:
         transformation: OR-rf5kf25
     mam-update-service:
         queue: mam-update-requests
+    ftp:
+        host: !ENV ${FTP_HOST}
+        user: !ENV ${FTP_USER}
+        password: !ENV ${FTP_PASSWORD}
+        destination-folder: DISK-SHARE-EVENTS
+
 
