DEV-1444 Make prefetch count configurable
As default, the prefetch count is unlimited, meaning that it will send
as many messages to a single consumer as it appears ready to accept them.
Making the prefetch count configurable allows for effectively distributing
the workload.

--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,7 @@ app:
         queue: !ENV ${RABBITMQ_QUEUE}
         exchange: !ENV ${RABBITMQ_EXCHANGE}
         get_subtitles_routing_key: !ENV ${RABBITMQ_GET_SUBTITLES_ROUTING_KEY}
+        prefetch_count: !ENV ${RABBITMQ_PREFETCH_COUNT}
     mtd-transformer: 
         host: !ENV ${MTD_TRANSFORMER}
         transformation: OR-rf5kf25
