--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ python-json-logger==0.1.11
 PyYAML==5.3.1
 regex==2020.5.14
 requests==2.23.0
+retry==0.9.2
 six==1.15.0
 structlog==20.1.0
 toml==0.10.1
