--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,6 @@
-appdirs==1.4.4
-attrs==19.3.0
-black==19.10b0
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.2
-idna==2.9
-lxml==4.5.1
-more-itertools==8.3.0
-packaging==20.4
-pathspec==0.8.0
-pika==1.1.0
-pluggy==0.13.1
-py==1.8.1
-pyparsing==2.4.7
-pytest==5.4.2
-python-json-logger==0.1.11
-PyYAML==5.3.1
-regex==2020.5.14
-requests==2.23.0
-six==1.15.0
-structlog==20.1.0
-toml==0.10.1
-typed-ast==1.4.1
-urllib3==1.25.9
+lxml==4.9.3
 viaa-chassis==0.2.0rc1
-wcwidth==0.1.9
+black==23.7.0
+requests==2.31.0
+pika==1.3.0
+mediahaven==0.4.3
