--- a/openshift/Jenkinsfile
+++ b/openshift/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
     }
     environment {
         OC_PROJECT = 'vrt-intake'
-        BASE_IMG = 'python:3.7'
+        BASE_IMG = 'python:3.10-slim'
         OC_URL = 'https://c113-e.private.eu-de.containers.cloud.ibm.com:30227'
         JIRA_URL = 'meemoo.atlassian.net'
         APP_NAME = 'vrt-events-metadata'
@@ -165,7 +165,7 @@ pipeline {
 }
 
 void getImageFromDockerfile() {
-    return 'python:3.7'
+    return 'python:3.10'
 }
 
 void setGitHubBuildStatus(String message, String state) {
